# fonction-labs-seed-bp

./: .gitignore  AGENT.md  CONTEXT_FOR_LLM.md  README.md  index.html  pyproject.toml
.github/workflows/: deploy-backend.yml  pages.yml
assets/: dashboard.js  dashboard_data.js  style.css
chat/: .gitignore  package.json  setup.sh
chat/backend/: .dockerignore  .gitignore  Dockerfile  build_and_push.sh  pyproject.toml
chat/backend/app/: auth.py  main.py  memory_store.py  server.py
chat/backend/app/agents/: bp_agent.py  title_agent.py
chat/backend/app/tools/: get_assumptions.py  list_tables.py  query_duckdb.py  read_context.py
chat/frontend/: .env.example  .env.production  index.html  package.json  vite.config.ts
chat/frontend/src/: App.tsx  main.tsx  vite-env.d.ts
chat/frontend/src/lib/: auth.ts  (+1 more)
dashboard/: index.html
dashboard/assets/: dashboard.js  dashboard_data.js  style.css
data/assumptions/: vc_case.yaml
data/raw/attio/: attio_funnel_extract.csv
data/raw/invoices/: qonto_invoices_2026.csv
docs/: 2026-06-24_reunion-jean-bp-synthese.md  T1.1_narrative-3-etapes_conclusions.md  T1.2_modeles-intermediaire-vs-cible_conclusions.md  T1.3_arr-decomposition_conclusions.md  T2_synthese-complete_conclusions.md  T3_depenses-headcount_conclusions.md  T4_strategie-enterprise_conclusions.md  TICKETS.md
src/fonction_bp/: config.py  pipeline.py  utils.py
src/fonction_bp/steps/: __init__.py  build_model_outputs.py  compute_model.py  export_dashboard.py  export_full_excel.py  export_simplified_excel.py  ingest_raw.py  load_assumptions.py  validate.py
(+3 files in other folders)
