[project]
name = "fonction-labs-bp-pipeline"
version = "0.2.0"
description = "Reproducible financial model pipeline for Fonction Labs seed BP"
requires-python = ">=3.11,<3.14"
dependencies = [
  "duckdb>=1.1.3,<2.0",
  "openpyxl>=3.1.5,<4.0",
  "pyyaml>=6.0.2,<7.0",
]

[project.scripts]
fonction-bp = "fonction_bp.pipeline:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fonction_bp"]
